# pebble

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-macos.yml  secret-scan.yml
docs/: AI_HANDOFF_DESIGN.md  ARCHITECTURE.md  DEMO.md  DESIGN.md  DEVELOPMENT_WORKFLOW.md  ENGINEERING_CHARTER.md  GIT_AND_SECURITY_POLICY.md  GROWTH_AND_PRODUCT_STRATEGY.md  IMPLEMENTATION_PLAN.md  LAUNCH_COPY.md  MACOS_DISTRIBUTION.md  MANUAL_SMOKE_CHECKLIST.md  PRODUCT_SPEC.md  REAL_CAPTURE_PREMORTEM.md  REAL_CAPTURE_SMOKE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY_AND_PRIVACY.md
scripts/: check-macos-release.mjs  install-macos-app.mjs  macos-install-policy.mjs  macos-install-policy.test.mjs  macos-release-policy.mjs  macos-release-policy.test.mjs  prepare-codex-sidecar.mjs  repository-security-policy.test.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity_feed.rs  activity_feed_tests.rs  ai_handoff.rs  ai_handoff_tests.rs  ai_handoff_types.rs  ai_runtime.rs  app_status.rs  capture_backend.rs  capture_backend_tests.rs  capture_lifecycle.rs  capture_lifecycle_tests.rs  capture_scheduler.rs  claude_api.rs  claude_credentials.rs  codex_policy.rs  diff_engine.rs  diff_engine_tests.rs  diff_engine_types.rs  discovery.rs  discovery_fetch.rs  discovery_tests.rs  lib.rs  live_tile.rs  live_tile_tests.rs  main.rs  menu_bar.rs  monitoring.rs  ocr_engine.rs  ocr_engine_tests.rs  pebble_session.rs  pebble_session_tests.rs  pebble_store.rs  pebble_store_tests.rs  performance_limits.rs  performance_limits_tests.rs  platform_capture.rs  platform_capture_tests.rs  public_source.rs  public_source_fetch.rs  public_source_tests.rs  (+13 more)
src-tauri/src/platform_capture/: platform_capture_macos.rs  platform_capture_macos_sys.rs
src/app/: AiAnswerView.tsx  AiConnectionPrompt.tsx  AiModelSwitch.tsx  AiPanelHeader.test.ts  AiPanelHeader.tsx  AiProviderSwitch.tsx  AiResponseArea.tsx  App.tsx  ClaudeCredentialControl.tsx  DiscoveryControl.tsx  LiveFrameCanvas.tsx  LiveTileControls.test.ts  LiveTileControls.tsx  LiveTilePanel.tsx  MainSections.tsx  MainView.tsx  PrivacyBanner.tsx  PublicSourceControl.tsx  RegionQuestionPanel.tsx  RegionSelectorParts.tsx  RegionSelectorSection.tsx  RegionSelectorView.tsx  SmartWatchControl.tsx  SmartWatchIntervalControl.tsx  SmartWatchStatusLine.test.ts  SmartWatchStatusLine.tsx  TileView.tsx  UpdateFeedPanel.test.ts  UpdateFeedPanel.tsx  WatchRecipeBar.tsx  appContent.test.ts  appContent.ts  liveTilePresentation.test.ts  liveTilePresentation.ts  useAdaptiveTheme.ts  useCaptureVisibilityGuards.ts  useDocumentVisibility.test.ts  useDocumentVisibility.ts  useLiveTileBackend.ts  usePebbleSession.ts
src/lib/: events.ts  invoke.ts  runtime.test.ts  runtime.ts
src/styles/: app.css  claude-credential.css  live-tile.css  region-selector.css  smart-watch.css  (+3 more)
(+36 files in other folders)
