[package]
name = "pebble"
version = "0.1.0"
description = "A local-first low-FPS screen-region utility."
authors = ["o-henry"]
license = "MIT"
repository = "https://github.com/o-henry/pebble"
edition = "2021"
rust-version = "1.77"
default-run = "pebble"

[lib]
name = "pebble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
png = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time"] }
url = "2"
